--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,63 @@
-img {
-    width: 120px;
-    height: 120px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+nav {  
+    color: rgb(10, 10, 10);
+    background-color: #f6e8b1;
     padding: 10px;
-    margin: 10px;
+
+}
+nav ul {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+h1 {
+    text-align: center;
+    color: #333;
+    font-size: 2.5em;
+    
+}
+img {
+    width: 160px;
+    height: 160px;
+    padding: 5px;
+    display: block;
+    margin: 0 auto; 
+
 }
 li {
     list-style: none;
     display: inline-block;
     margin: 10px;;
+}
+li a {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: #f48e19;
+    border-radius: 10px 0 10px 0;
+    color: #f0f0f0;
+
+}
+h2 {
+    text-align: center;
+    color: #333;
+    font-size: 1.5em;
+}
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #f6e8b1;
+    color: #333;
+    margin-top: auto;
 }
